# BespokeSynth

./: BespokeSynth.jucer  CMakeLists.txt
cmake/data/: AppConfig.h.in
cmake/tools/_build/Visual Studio 16 2019/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  tools.sln  tools_juce_core.vcxproj  tools_juce_core.vcxproj.filters
cmake/tools/_build/Visual Studio 16 2019/BinaryDataBuilder/: BinaryDataBuilder.vcxproj  BinaryDataBuilder.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake
libs/: CMakeLists.txt
libs/pybind11/: CMakeLists.txt
src/: CMakeLists.txt
src/effects/: CMakeLists.txt
src/modules/: CMakeLists.txt  ModulatorAdd.cpp
src/uicontrols/: CMakeLists.txt
