# src top level cmake

jucer_project_files("BespokeSynth/src"
# Compile   Xcode     Binary    File
#           Resource  Resource
  x         .         .         "ADSR.cpp"
  .         .         .         "ADSR.h"
  x         .         .         "ADSRDisplay.cpp"
  .         .         .         "ADSRDisplay.h"
  x         .         .         "ArrangementMaster.cpp"
  .         .         .         "ArrangementMaster.h"
  x         .         .         "ChannelBuffer.cpp"
  .         .         .         "ChannelBuffer.h"
  x         .         .         "Bespoke_Platform.cpp"
  x         .         .         "BiquadFilter.cpp"
  .         .         .         "BiquadFilter.h"
  x         .         .         "Canvas.cpp"
  .         .         .         "Canvas.h"
  x         .         .         "CanvasControls.cpp"
  .         .         .         "CanvasControls.h"
  x         .         .         "CanvasElement.cpp"
  .         .         .         "CanvasElement.h"
  x         .         .         "Chord.cpp"
  .         .         .         "Chord.h"
  x         .         .         "ChordDatabase.cpp"
  .         .         .         "ChordDatabase.h"
  x         .         .         "Curve.cpp"
  .         .         .         "Curve.h"
  x         .         .         "EffectFactory.cpp"
  .         .         .         "EffectFactory.h"
  x         .         .         "EnvelopeEditor.cpp"
  .         .         .         "EnvelopeEditor.h"
  x         .         .         "EnvOscillator.cpp"
  .         .         .         "EnvOscillator.h"
  x         .         .         "FFT.cpp"
  .         .         .         "FFT.h"
  x         .         .         "FileStream.cpp"
  .         .         .         "FileStream.h"
  .         .         .         "FillSaveDropdown.h"
  x         .         .         "FilterButterworth24db.cpp"
  .         .         .         "FilterButterworth24db.h"
  x         .         .         "FilterViz.cpp"
  .         .         .         "FilterViz.h"
  x         .         .         "FloatSliderLFOControl.cpp"
  .         .         .         "FloatSliderLFOControl.h"
  x         .         .         "FMVoice.cpp"
  .         .         .         "FMVoice.h"
  x         .         .         "Granulator.cpp"
  .         .         .         "Granulator.h"
  .         .         .         "IAudioEffect.h"
  .         .         .         "IAudioPoller.h"
  x         .         .         "IAudioProcessor.cpp"
  .         .         .         "IAudioProcessor.h"
  x         .         .         "IAudioReceiver.cpp"
  .         .         .         "IAudioReceiver.h"
  x         .         .         "IAudioSource.cpp"
  .         .         .         "IAudioSource.h"
  x         .         .         "IClickable.cpp"
  .         .         .         "IClickable.h"
  x         .         .         "IDrawableModule.cpp"
  .         .         .         "IDrawableModule.h"
  .         .         .         "IMidiVoice.h"
  x         .         .         "IModulator.cpp"
  .         .         .         "IModulator.h"
  .         .         .         "INonstandardController.h"
  x         .         .         "INoteReceiver.cpp"
  .         .         .         "INoteReceiver.h"
  x         .         .         "INoteSource.cpp"
  .         .         .         "INoteSource.h"
  .         .         .         "IPatchable.h"
  .         .         .         "IPollable.h"
  x         .         .         "IPulseReceiver.cpp"
  .         .         .         "IPulseReceiver.h"
  .         .         .         "IVoiceParams.h"
  x         .         .         "JumpBlender.cpp"
  .         .         .         "JumpBlender.h"
  x         .         .         "KarplusStrongVoice.cpp"
  .         .         .         "KarplusStrongVoice.h"
  x         .         .         "LaunchpadInterpreter.cpp"
  .         .         .         "LaunchpadInterpreter.h"
  x         .         .         "LFO.cpp"
  .         .         .         "LFO.h"
  x         .         .         "LinkwitzRileyFilter.cpp"
  .         .         .         "LinkwitzRileyFilter.h"
  x         .         .         "LocationZoomer.cpp"
  .         .         .         "LocationZoomer.h"
  x         .         .         "Main.cpp"
  x         .         .         "MainComponent.cpp"
  x         .         .         "MathUtils.cpp"
  .         .         .         "MathUtils.h"
  x         .         .         "MidiDevice.cpp"
  .         .         .         "MidiDevice.h"
  x         .         .         "MidiReader.cpp"
  .         .         .         "MidiReader.h"
  x         .         .         "ModularSynth.cpp"
  .         .         .         "ModularSynth.h"
  x         .         .         "ModulationChain.cpp"
  .         .         .         "ModulationChain.h"
  x         .         .         "ModuleContainer.cpp"
  .         .         .         "ModuleContainer.h"
  x         .         .         "ModuleFactory.cpp"
  .         .         .         "ModuleFactory.h"
  x         .         .         "ModuleSaveData.cpp"
  .         .         .         "ModuleSaveData.h"
  x         .         .         "Monome.cpp"
  .         .         .         "Monome.h"
  x         .         .         "MultiBandTracker.cpp"
  .         .         .         "MultiBandTracker.h"
  x         .         .         "NamedMutex.cpp"
  .         .         .         "NamedMutex.h"
  .         .         .         "NoteEffectBase.h"
  x         .         .         "ofxJSONElement.cpp"
  .         .         .         "ofxJSONElement.h"
  x         .         .         "OpenFrameworksPort.cpp"
  .         .         .         "OpenFrameworksPort.h"
  x         .         .         "OscController.cpp"
  .         .         .         "OscController.h"
  x         .         .         "Oscillator.cpp"
  .         .         .         "Oscillator.h"
  x         .         .         "PatchCable.cpp"
  .         .         .         "PatchCable.h"
  x         .         .         "PatchCableSource.cpp"
  .         .         .         "PatchCableSource.h"
  x         .         .         "PeakTracker.cpp"
  .         .         .         "PeakTracker.h"
  x         .         .         "PerformanceTimer.cpp"
  .         .         .         "PerformanceTimer.h"
  x         .         .         "PitchDetector.cpp"
  .         .         .         "PitchDetector.h"
  x         .         .         "PitchShifter.cpp"
  .         .         .         "PitchShifter.h"
  x         .         .         "PolyphonyMgr.cpp"
  .         .         .         "PolyphonyMgr.h"
  x         .         .         "Profiler.cpp"
  .         .         .         "Profiler.h"
  x         .         .         "Ramp.cpp"
  .         .         .         "Ramp.h"
  x         .         .         "RollingBuffer.cpp"
  .         .         .         "RollingBuffer.h"
  x         .         .         "Sample.cpp"
  .         .         .         "Sample.h"
  x         .         .         "SampleDrawer.cpp"
  .         .         .         "SampleDrawer.h"
  x         .         .         "SampleVoice.cpp"
  .         .         .         "SampleVoice.h"
  x         .         .         "SingleOscillatorVoice.cpp"
  .         .         .         "SingleOscillatorVoice.h"
  x         .         .         "SynthGlobals.cpp"
  .         .         .         "SynthGlobals.h"
  x         .         .         "TriggerDetector.cpp"
  .         .         .         "TriggerDetector.h"
  x         .         .         "UIGrid.cpp"
  .         .         .         "UIGrid.h"
  x         .         .         "VSTPlayhead.cpp"
  .         .         .         "VSTPlayhead.h"
  x         .         .         "VSTWindow.cpp"
  .         .         .         "VSTWindow.h"
)

add_subdirectory(modules)
add_subdirectory(effects)